--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,6 +5,7 @@
         android:orderInCategory="100" app:showAsAction="never" />
     <item android:id="@+id/action_add_number" android:title="@string/add_number"
         android:orderInCategory="100" app:showAsAction="never" />
-
+    <item android:id="@+id/action_delete_all" android:title="@string/delete_all_numbers"
+        android:orderInCategory="100" app:showAsAction="never" />
 
 </menu>
